# bazel-include

./: .bazelrc  BUILD.bazel  main1.cc  main2.cc  main3.cc
pkg/: BUILD.bazel
pkg/foo/: sub.hh
