cc_binary(
    name = "bin1",
    srcs = ["main1.cc"],
    deps = ["//pkg:dep1"],
)

# #include "sub.hh"
cc_binary(
    name = "bin2",
    srcs = ["main2.cc"],
    deps = ["//pkg:dep2"],
)

# #include "third_party/foo/sub.hh"
cc_binary(
    name = "bin3",
    srcs = ["main3.cc"],
    deps = ["//pkg:dep3"],
)
