# #include "pkg/foo/sub.hh"
cc_library(
    name = "dep1",
    hdrs = ["foo/sub.hh"],
    visibility = ["//visibility:public"],
)

# No need to specify "foo" because there's the include.
# #include "sub.hh"
cc_library(
    name = "dep2",
    hdrs = ["foo/sub.hh"],
    visibility = ["//visibility:public"],
    includes = ["foo"],
)

# either
#   #include "third_party/foo/sub.hh"
# or
#   #include "sub.hh"
cc_library(
    name = "dep3",
    hdrs = ["foo/sub.hh"],
    visibility = ["//visibility:public"],
    include_prefix = "third_party",
    includes = ["foo"],
)
